// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndemniteCCn /> should render error 1`] = `
.c1 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):active,
.c6:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: auto;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
  border-color: #e5f1fe;
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #e5f1fe;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c3 {
  margin: 1.25rem 0;
}

<div>
  <h2
    class="c0"
  >
    Convention collective nationale des industries chimiques et connexes
  </h2>
  <div
    class="c1"
  >
    lorem ipsum
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="8"
        />
      </svg>
    </div>
    <div
      class="c5"
      role="alert"
    >
      Un accord collectif d’entreprise, le contrat de travail et un usage peuvent prévoir une formule de calcul plus avantageuse pour le salarié. Dans ce cas, le salarié perçoit l’indemnité la plus élevée.
    </div>
  </div>
  <button
    class="c6"
  >
    Recommencer une simulation
  </button>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité conventionnelle 1`] = `
.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: auto;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
  border-color: #e5f1fe;
  box-shadow: none;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #e5f1fe;
}

.c20 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c1 {
  font-size: 1.375rem;
  font-weight: 700;
  color: #005994;
}

.c9 {
  margin-bottom: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 0.25rem;
  background-color: #4c5467;
  width: calc(50% * 0.021);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding: 1em;
}

.c15 {
  border-radius: 0.25rem;
  width: calc(50% * 1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding: 1em;
}

.c7 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 1.375rem;
}

.c16 {
  margin-left: 1rem;
  font-size: 1.875rem;
}

.c8 {
  margin-top: 1.25rem;
}

.c10 {
  font-weight: bold;
  font-size: 0.875rem;
}

.c11 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22%238393a7%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c12 {
  font-size: 0.875rem;
}

.c13 {
  margin: 1rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  padding: 0 0.625rem;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c14 {
  padding: 0 0.625rem;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c4 {
  font-size: 1.375rem;
}

.c18 {
  margin: 1.25rem 0;
}

@media (max-width:980px) {
  .c5 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c6 {
    width: calc(100% * 0.021);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c7 {
    margin-left: 0;
    width: 100%;
  }
}

@media (max-width:980px) {
  .c16 {
    margin-left: 0;
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Convention collective nationale des industries chimiques et connexes
  </h2>
  <p>
    À partir des éléments que vous avez saisis, votre indémnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      2,000.00
       € brut
    </strong>
  </p>
  <p>
    Il s’agit du montant le plus favorable entre votre indemnité légale et votre indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <section
      class="c3"
    >
      <h2
        class="c4"
      >
        Votre indemnite légale
      </h2>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <span
          class="c7"
        >
          42.00
           € brut
        </span>
      </div>
      <details
        class="c8"
      >
        <summary
          class="c9"
        >
          Voir le detail du calcul
        </summary>
        <strong
          class="c10"
        >
          Élements saisis :
        </strong>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            salaire ref (Sref)
             : 
            42
          </li>
          <li
            class="c12"
          >
            anciennete (A)
             : 
            32
          </li>
        </ul>
        <strong
          class="c10"
        >
          Formule
        </strong>
        <div
          class="c13"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`Sref * A\`
            </div>
          </div>
        </div>
      </details>
    </section>
    <section
      class="c14"
    >
      <h2
        class="c4"
      >
        Votre indemnite conventionnelle
      </h2>
      <div
        class="c5"
      >
        <div
          class="c15"
        />
        <span
          class="c16"
        >
          2,000.00
           € brut
        </span>
      </div>
      <details
        class="c8"
      >
        <summary
          class="c9"
        >
          Voir le detail du calcul
        </summary>
        <strong
          class="c10"
        >
          Élements saisis :
        </strong>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
          <li
            class="c12"
          >
            foo
             : 
            bar
          </li>
        </ul>
        <strong
          class="c10"
        >
          Formule
        </strong>
        <div
          class="c13"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`1337 * Sref * foo\`
            </div>
          </div>
        </div>
      </details>
    </section>
  </div>
  <div
    class="c17 c18"
  >
    <div
      class="c19"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="8"
        />
      </svg>
    </div>
    <div
      class="c20"
      role="alert"
    >
      Un accord collectif d’entreprise, le contrat de travail et un usage peuvent prévoir une formule de calcul plus avantageuse pour le salarié. Dans ce cas, le salarié perçoit l’indemnité la plus élevée.
    </div>
  </div>
  <button
    class="c21"
  >
    Recommencer une simulation
  </button>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité legale 1`] = `
.c21 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
}

.c21:not([disabled]):hover,
.c21:not([disabled]):active,
.c21:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c21[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: auto;
  color: #434956;
  background-color: #fff;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: none;
  animation: none;
  border-color: #e5f1fe;
  box-shadow: none;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #e5f1fe;
}

.c20 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c1 {
  font-size: 1.375rem;
  font-weight: 700;
  color: #005994;
}

.c9 {
  margin-bottom: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 0.25rem;
  width: calc(50% * 1);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding: 1em;
}

.c15 {
  border-radius: 0.25rem;
  background-color: #4c5467;
  width: calc(50% * 0.6685);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  padding: 1em;
}

.c16 {
  margin-left: 1rem;
  color: #4c5467;
  font-size: 1.375rem;
}

.c7 {
  margin-left: 1rem;
  font-size: 1.875rem;
}

.c8 {
  margin-top: 1.25rem;
}

.c10 {
  font-weight: bold;
  font-size: 0.875rem;
}

.c11 {
  list-style-image: url("data:image/svg+xml;,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%206%2010%22%3E%3Cpath%20fill%3D%22%238393a7%22%20d%3D%22M0%204h5v1H0z%22%2F%3E%3C%2Fsvg%3E");
}

.c12 {
  font-size: 0.875rem;
}

.c13 {
  margin: 1rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  padding: 0 0.625rem;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c3 {
  padding: 0 0.625rem;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c4 {
  font-size: 1.375rem;
}

.c18 {
  margin: 1.25rem 0;
}

@media (max-width:980px) {
  .c5 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c6 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c15 {
    width: calc(100% * 0.6685);
  }
}

@media (max-width:980px) {
  .c16 {
    margin-left: 0;
    width: 100%;
  }
}

@media (max-width:980px) {
  .c7 {
    margin-left: 0;
    width: 100%;
  }
}

<div>
  <h2
    class="c0"
  >
    Convention collective nationale des industries chimiques et connexes
  </h2>
  <p>
    À partir des éléments que vous avez saisis, votre indémnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      2,000.00
       € brut
    </strong>
  </p>
  <p>
    Il s’agit du montant le plus favorable entre votre indemnité légale et votre indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <section
      class="c3"
    >
      <h2
        class="c4"
      >
        Votre indemnite légale
      </h2>
      <div
        class="c5"
      >
        <div
          class="c6"
        />
        <span
          class="c7"
        >
          2,000.00
           € brut
        </span>
      </div>
      <details
        class="c8"
      >
        <summary
          class="c9"
        >
          Voir le detail du calcul
        </summary>
        <strong
          class="c10"
        >
          Élements saisis :
        </strong>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            salaire ref (Sref)
             : 
            42
          </li>
          <li
            class="c12"
          >
            anciennete (A)
             : 
            32
          </li>
        </ul>
        <strong
          class="c10"
        >
          Formule
        </strong>
        <div
          class="c13"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`Sref * A\`
            </div>
          </div>
        </div>
      </details>
    </section>
    <section
      class="c14"
    >
      <h2
        class="c4"
      >
        Votre indemnite conventionnelle
      </h2>
      <div
        class="c5"
      >
        <div
          class="c15"
        />
        <span
          class="c16"
        >
          1,337.00
           € brut
        </span>
      </div>
      <details
        class="c8"
      >
        <summary
          class="c9"
        >
          Voir le detail du calcul
        </summary>
        <strong
          class="c10"
        >
          Élements saisis :
        </strong>
        <ul
          class="c11"
        >
          <li
            class="c12"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
          <li
            class="c12"
          >
            foo
             : 
            bar
          </li>
        </ul>
        <strong
          class="c10"
        >
          Formule
        </strong>
        <div
          class="c13"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`1337 * Sref * foo\`
            </div>
          </div>
        </div>
      </details>
    </section>
  </div>
  <div
    class="c17 c18"
  >
    <div
      class="c19"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="8"
        />
      </svg>
    </div>
    <div
      class="c20"
      role="alert"
    >
      Un accord collectif d’entreprise, le contrat de travail et un usage peuvent prévoir une formule de calcul plus avantageuse pour le salarié. Dans ce cas, le salarié perçoit l’indemnité la plus élevée.
    </div>
  </div>
  <button
    class="c21"
  >
    Recommencer une simulation
  </button>
</div>
`;
